Add Prettier + config + formatting

--- a/posts/guidelines-for-letterspacing-type.mdx
+++ b/posts/guidelines-for-letterspacing-type.mdx
@@ -18,8 +18,8 @@ This usually involves setting a `letter-spacing` value around 0.2–0.25 ems for
 
 <CodePen
   height={220}
-  id='QbRayd'
-  title='Spaced out capital heading and acronyms'
+  id="QbRayd"
+  title="Spaced out capital heading and acronyms"
 />
 
 In this example, “HTML” and “CSS” are set in _small caps_, but the same advice applies here, too.
@@ -36,8 +36,8 @@ In more practical terms, here’s what that relationship looks like:
 
 <CodePen
   height={500}
-  id='aa39c703c30de9f1b65a3c738ad344c2'
-  title='Large text with tight spacing, small text with loose spacing'
+  id="aa39c703c30de9f1b65a3c738ad344c2"
+  title="Large text with tight spacing, small text with loose spacing"
 />
 
 ## Font weight
@@ -48,8 +48,8 @@ This is because of the way typefaces at look and feel at certain weights. Light 
 
 <CodePen
   height={370}
-  id='ba2516c0e03124d5afe2d7f0eefec5fd'
-  title='Light text with loose letterspacing, bold text with tight letterspacing'
+  id="ba2516c0e03124d5afe2d7f0eefec5fd"
+  title="Light text with loose letterspacing, bold text with tight letterspacing"
 />
 
 For a more in-depth explanation on how weight affects letterspacing decisions, check out Carolina de Bartolo’s _Typography Matters_ talk over on [YouTube][carolina].
@@ -62,8 +62,8 @@ If you look at the following example, you’ll notice that the white-on-black te
 
 <CodePen
   height={314}
-  id='qdGyJY'
-  title='Black-on-white text with normal letterspacing, white-on-black text with loose letterspacing'
+  id="qdGyJY"
+  title="Black-on-white text with normal letterspacing, white-on-black text with loose letterspacing"
 />
 
 CSS supports `letter-spacing` values in quarter-pixel increments, so I’m able to specify `0.5px` in this example. When setting type at a small size, you’ll often find comfortable letterspacing somewhere _in between_ whole pixel values.
