--- a/posts/kerning-and-ligatures-in-letterspaced-type.mdx
+++ b/posts/kerning-and-ligatures-in-letterspaced-type.mdx
@@ -20,8 +20,8 @@ The majority of kerning _decreases_ the space present between letters. By enabli
 
 <CodePen
   height={330}
-  id='5e36a72a168d631d7f3b3ccdcf310497'
-  title='Comparison of kerned and unkerned bold type where the unkerned text looks unattractive'
+  id="5e36a72a168d631d7f3b3ccdcf310497"
+  title="Comparison of kerned and unkerned bold type where the unkerned text looks unattractive"
 />
 
 In the example above, there’s a noticeable gap between the unkerned _T_ and _o_ pair at the beginning of the word _Tomato_. It looks awkward in an otherwise tightly spaced context. Enabling kerning here tightens up the initial spacing and improves the overall look and feel of the word.
@@ -34,8 +34,8 @@ If we look at the same word _Tomato_ &mdash; now set with positive letterspacing
 
 <CodePen
   height={330}
-  id='6d702133d6c081a4af782d648e1c3ff6'
-  title='Comparison of kerned and unkerned thin type looking nearly identical'
+  id="6d702133d6c081a4af782d648e1c3ff6"
+  title="Comparison of kerned and unkerned thin type looking nearly identical"
 />
 
 ## Ligatures
@@ -48,8 +48,8 @@ Ligatures are always a fixed width, but you can still letterspace the type surro
 
 <CodePen
   height={270}
-  id='e4d79dfcf8e98e856f9d5c8ba65f8b4e'
-  title='Spaced-out type with two awkardly joined letters in the FT ligature'
+  id="e4d79dfcf8e98e856f9d5c8ba65f8b4e"
+  title="Spaced-out type with two awkardly joined letters in the FT ligature"
 />
 
 In this example, we’re much better off using the version of _liftoff_ that doesn’t contain ligatures.
@@ -60,8 +60,8 @@ Ligatures are often narrower than their two related characters, so they look rig
 
 <CodePen
   height={270}
-  id='cb5625881dcf0db7e11d26d69c2ff40c'
-  title='Tight type where FT looks awkward as separate letters instead of a ligature'
+  id="cb5625881dcf0db7e11d26d69c2ff40c"
+  title="Tight type where FT looks awkward as separate letters instead of a ligature"
 />
 
 If you look closely at the _ff_ and _ft_ pairs in the second word _liftoff_, you’ll see an awkward gap between their crossbars. Enabling ligatures fixes this problem by combining the separate letters into a single glyph and merging the two crossbars into one.
