--- a/posts/sidebearings-and-alignment.mdx
+++ b/posts/sidebearings-and-alignment.mdx
@@ -17,8 +17,8 @@ In left-aligned type, each line’s first glyph begins at the same point, but be
 
 <CodePen
   height={650}
-  id='43118a0bceea2de380f87402ff75f3c8'
-  title='Misaligned headings of different sizes'
+  id="43118a0bceea2de380f87402ff75f3c8"
+  title="Misaligned headings of different sizes"
 />
 
 In the example above, you can see that the larger the font size is, the more indented the type appears.
@@ -31,8 +31,8 @@ Depending on the typeface and font size, the value you’ll need can differ wild
 
 <CodePen
   height={650}
-  id='17300c1454dcfc16c02cc3fba9546333'
-  title='Left-aligned headings of different sizes'
+  id="17300c1454dcfc16c02cc3fba9546333"
+  title="Left-aligned headings of different sizes"
 />
 
 And there you have it: the type now looks properly aligned, thanks to a few negative margins.
