--- a/posts/typographic-units-in-css.mdx
+++ b/posts/typographic-units-in-css.mdx
@@ -24,8 +24,8 @@ Using `ex` units in CSS is just like using any other units. You’re able to wri
 
 <CodePen
   height={290}
-  id='d81ece0b6a9436654dd4777a73634005'
-  title='Ex unit height highlighted'
+  id="d81ece0b6a9436654dd4777a73634005"
+  title="Ex unit height highlighted"
 />
 
 ## Ch units
@@ -44,8 +44,8 @@ In the following example, I’m able to declare `max-width: 75ch` on the paragra
 
 <CodePen
   height={340}
-  id='fbfae4fd58d5356f6b95683fb219aa38'
-  title='Monospace type at 75ch'
+  id="fbfae4fd58d5356f6b95683fb219aa38"
+  title="Monospace type at 75ch"
 />
 
 ## Takeaways
