--- a/posts/data-attributes-for-keyboard-shortcuts.mdx
+++ b/posts/data-attributes-for-keyboard-shortcuts.mdx
@@ -4,6 +4,7 @@ date: '2015-03-16'
 description: 'With a little help from JavaScript, you can add a data attribute to any HTML element to instantly assign a shortcut key.'
 title: Data Attributes for Keyboard Shortcuts
 ---
+
 Assigning keyboard shortcuts on the web could be as simple as adding an HTML attribute onto an element and setting its value. Even though browsers are unlikely to support this approach natively, you’re still able to define shortcut keys in your markup by using `data` attributes and a touch of JavaScript.
 
 ```html
@@ -41,18 +42,18 @@ Remember our three use cases? Well, in JavaScript, they translate into the follo
 With jQuery Hotkeys set up in your project, write a `$(document).ready()` call that contains the following JavaScript:
 
 ```javascript
-$('[data-shortcut]').each(function() {
+$('[data-shortcut]').each(function () {
   var $element = $(this),
-    key = $element.data('shortcut')
+    key = $element.data('shortcut');
 
-  $(document).on('keyup', null, String(key), function() {
-    $element.trigger('focus').trigger('click')
+  $(document).on('keyup', null, String(key), function () {
+    $element.trigger('focus').trigger('click');
 
     if ($element.prop('tagName').toLowerCase() === 'a') {
-      window.location = element.attr('href')
+      window.location = element.attr('href');
     }
-  })
-})
+  });
+});
 ```
 
 This code will loop through every HTML element that has a `[data-shortcut]` attribute and attach the keyboard shortcut’s event handler. Now when you press an assigned key, the `keyup` event will trigger both `click` and `focus` events on its related DOM element. Additionally, if the element is an `<a>` tag, your browser will follow the link provided by the element’s `href` attribute.
@@ -62,15 +63,25 @@ This code will loop through every HTML element that has a `[data-shortcut]` attr
 Your JavaScript is up and running, so you can finally start assigning keyboard shortcuts in your markup! Find an `<a>`, `<button>`, or `<input>` tag that could use a shortcut, and add a `data-shortcut` attribute with the intended key as its value.
 
 ```html
-<a href="http://example.com/edit" data-shortcut="e">Edit</a>
+<a
+  href="http://example.com/edit"
+  data-shortcut="e"
+  >Edit</a
+>
 ```
 
 If you want to assign a keyboard shortcut that requires pressing two or more keys at once, you’ll need to use the [syntax][jquery-hotkeys-notes] that jQuery Hotkeys provides. The jQuery Hotkeys [example page][jquery-hotkeys-example] has even more key combinations.
 
 ```html
-<a href="/index.html" data-shortcut="shift+1">
+<a
+  href="/index.html"
+  data-shortcut="shift+1"
+>
   <button data-shortcut="alt+m">Menu</button>
-  <input type="submit" data-shortcut="ctrl+alt+enter"/>
+  <input
+    type="submit"
+    data-shortcut="ctrl+alt+enter"
+  />
 </a>
 ```
 
