--- a/posts/making-sense-of-ch-units.mdx
+++ b/posts/making-sense-of-ch-units.mdx
@@ -16,8 +16,8 @@ It comes down to the defintion of a ch unit. According to the [specification][sp
 
 <CodePen
   height={560}
-  id='24f0cb69d20658c4b14f6fef8e32ce59'
-  title='Mismatched text and ch widths'
+  id="24f0cb69d20658c4b14f6fef8e32ce59"
+  title="Mismatched text and ch widths"
 />
 
 See the problem? When compared to a line of zeros, ch units perform _exactly_ as the specification defines them. But when compared to a line of text, ch units are too wide to be useful.
@@ -32,16 +32,16 @@ Multiply by that number when using ch units, and the resulting value gives you a
 
 <CodePen
   height={490}
-  id='c41229e9197ff46d987dceffb4f36b38'
-  title='Corrected text and ch widths'
+  id="c41229e9197ff46d987dceffb4f36b38"
+  title="Corrected text and ch widths"
 />
 
 The more text there is, the more reliable the resulting number becomes.
 
 <CodePen
   height={370}
-  id='a6c07f62eb3d33741effa552b22abd84'
-  title='Corrected paragraph text matching ch width'
+  id="a6c07f62eb3d33741effa552b22abd84"
+  title="Corrected paragraph text matching ch width"
 />
 
 ## Takeaways
