Fix YAML description

--- a/posts/typographic-units-in-css.mdx
+++ b/posts/typographic-units-in-css.mdx
@@ -1,7 +1,7 @@
 ---
 title: Typographic Units in CSS
 date: 2015-08-05
-"CSS offers many more units than pixels, ems, and percentages. Out of all the units available to us, I find two the most intriguing: ex and ch."
+description: "CSS offers many more units than pixels, ems, and percentages. Out of all the units available to us, I find two the most intriguing: ex and ch."
 ---
 
 `Ex` and `ch` are _typographic units_, meaning their values depend on an element’s font family. When you use `em` or `rem` units, the browser computes their values based on the element’s font size. It doesn’t matter what font gets displayed onscreen, the browser will compute the same values for every typeface. This is where `ex` and `ch` units offer a little more flexibility. They require the browser to reference an element’s font family _before_ computing values and applying styles.
