Update Cloudflare post

--- a/posts/storage-with-cloudflare-domains-and-r2.mdx
+++ b/posts/storage-with-cloudflare-domains-and-r2.mdx
@@ -4,7 +4,7 @@ date: 2023-08-29
 description: Learn how to host files on the web using Cloudflare’s R2 bucket storage and Cloudflare’s inexpensive domain registration.
 ---
 
-What’s [Cloudflare R2](https://www.cloudflare.com/developer-platform/r2/)? If you’ve ever used Amazon S3, Cloudflare pitches their R2 service as comparable object storage but without egress fees. What’s an egress fee? [Nothing, what’s an egress fee with you?](https://www.youtube.com/watch?v=X_lIhrzNhwA) Seriously though, for my purposes, their [pricing calculator](https://r2-calculator.cloudflare.com/) says it’s $0.00, and I enjoy using other Cloudflare products, so that’s why I picked R2 instead of something else.
+What’s [Cloudflare R2](https://www.cloudflare.com/developer-platform/r2/)? If you’ve familiar with Amazon S3, Cloudflare sells their R2 service as comparable object storage minus any egress fees. What’s an egress fee? [Nothing, what’s an egress fee with you?](https://www.youtube.com/watch?v=X_lIhrzNhwA) Seriously though, for my purposes, their [pricing calculator](https://r2-calculator.cloudflare.com/) says it’s $0.00, and I enjoy using other Cloudflare products, so that’s why I picked R2 instead of something else.
 
 If you want to buy a new domain and set up an R2 bucket for hosting web files, here are the steps to make that happen:
 
@@ -18,7 +18,7 @@ Sound reasonable? Let’s get into it.
 
 ## Buy a domain
 
-The first step is to purchase a domain on Cloudflare. You can buy domains anywhere, but having your domain and storage in one place makes for less hassle setting them up together. Cloudflare sells new domains [at cost](https://twitter.com/GergelyOrosz/status/1671407196591259648), so it’s tough to find a cheaper option unless a competing registrar is selling domains at some introductory rate before adding their margin at renewal.
+The first step is to purchase a domain on Cloudflare. You can buy domains anywhere, but having your domain and storage in one place makes for less hassle setting them up together. Cloudflare sells new domains [at cost](https://twitter.com/GergelyOrosz/status/1671407196591259648), making it tough to find a cheaper option unless a competing registrar is selling domains at some introductory rate.
 
 Here’s how to purchase a domain on Cloudflare:
 
