--- a/content/posts/styling-text-with-svg-filters.mdx
+++ b/content/posts/styling-text-with-svg-filters.mdx
@@ -2,6 +2,7 @@
 title: Styling Text with SVG Filters
 date: 2016-04-21
 description: There are many different ways to underline text on the web. From tried-and-true CSS to SVG filters, these are some of the methods you can use.
+publication: code-school
 ---
 
 **Note:** This article was originally published on the [Code School Blog](https://web.archive.org/web/20170707134107/https://www.codeschool.com/blog/2016/04/21/styling-text-with-svg-filters/).
