Update SVG Filters post description

--- a/content/posts/styling-text-with-svg-filters.mdx
+++ b/content/posts/styling-text-with-svg-filters.mdx
@@ -1,7 +1,7 @@
 ---
 title: Styling Text with SVG Filters
 date: 2016-04-21
-description: There are many different ways to underline text on the web. From tried-and-true CSS to SVG filters, these are some of the methods you can use.
+description: With SVG filters, you can build reusable effects for applying custom styles to text. Here’s how to recreate the iconic typography on a US dollar bill using SVG filters.
 publication: code-school
 ---
 
