Update post description

--- a/content/posts/understanding-fecolormatrix-svg-filters.mdx
+++ b/content/posts/understanding-fecolormatrix-svg-filters.mdx
@@ -1,7 +1,7 @@
 ---
 title: Understanding feColorMatrix SVG Filters
 date: 2025-07-03
-description: Like all SVG filters, feColorMatrix is extremely powerful and super weird to learn the first time. I’m bad at explaining, so here’s a bunch of interactive demos that hopefully help it all makes sense.
+description: Like all SVG filters, <feColorMatrix> is extremely powerful and super weird to learn the first time. I’m bad at explaining, so here’s a bunch of interactive demos that hopefully help it all makes sense.
 ---
 
 In my last post about [chromatic aberration with SVG filters](/posts/chromatic-aberration-with-svg-filters), I showed how to create an SVG/CSS-only effect that used `<feColorMatrix>` to isolate RGB color channels. Honestly, `<feColorMatrix>` is pretty complicated and deserves a whole own post on its own.
