Squashed branch post-titles
commit 466c39073ca62bddb9190296dd034519124ee22a
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Mon Jul 7 14:15:08 2025 -0500

    Size titles

commit de515134820b9f6e7d2f175787c90d3287257d9f
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Mon Jul 7 12:47:46 2025 -0500

    Add post title size metadata

commit a56bf8efa87a7ae35ca3edcd7908acaad9997ceb
Author: John D. Jameson <thejohnjameson@gmail.com>
Date:   Mon Jul 7 12:47:22 2025 -0500

    Add post title wiggle effect

--- a/content/posts/ampersands-and-google-fonts.mdx
+++ b/content/posts/ampersands-and-google-fonts.mdx
@@ -2,6 +2,7 @@
 title: Ampersands & Google Fonts
 date: 2014-03-08
 description: Titles, headings, and display text can all benefit from the use of a well-placed ampersand. Today Google Fonts makes using beautiful ampersands on the web easier and more widely supported than ever before.
+titleSize: 14
 ---
 
 Ampersands are used most effectively in display contexts, such as titles and headings, so it rarely makes sense to use the dull, standard-issue ampersands that accompany most fonts. Instead, we’re often better off using a more interesting and elaborate alternative. Many fonts feature an _italic_ ampersand that is far more elegant than its conventional counterpart, making the italic ampersand preferable in a variety of contexts.
