--- a/content/posts/chromatic-aberration-with-svg-filters.mdx
+++ b/content/posts/chromatic-aberration-with-svg-filters.mdx
@@ -2,6 +2,7 @@
 title: Chromatic Aberration with SVG Filters
 date: 2025-06-28
 description: Get that lo-fi, old school, VHS quality look with color fringing thanks to SVG filters.
+titleSize: 15.5
 ---
 
 So first off, what is **chromatic aberration**?
