--- a/content/posts/filtering-google-results-with-alfred.mdx
+++ b/content/posts/filtering-google-results-with-alfred.mdx
@@ -2,6 +2,7 @@
 title: Filtering Google Results with Alfred
 date: 2014-08-20
 description: Google offers powerful filters for search results that can help you find exactly what you’re looking for — it just isn’t quick or easy to do. By using Alfred, you can configure these searches once and reuse them whenever you want.
+titleSize: 12
 ---
 
 Filtering search results on Google is always a bit of a hassle. The search tools are difficult to find, and once you’ve found them, you have to click each filter individually before _refreshing the page_ to enable another one. For commonly used filters or groups of filters, this can add up to be a real productivity killer. Thanks to [Alfred][alfred], however, you can configure these filters a **single time,** and then save them as a custom Web Search to use again in the future.
