--- a/content/posts/making-sense-of-ch-units.mdx
+++ b/content/posts/making-sense-of-ch-units.mdx
@@ -2,6 +2,7 @@
 title: Making Sense of Ch Units
 date: 2015-09-16
 description: If you try to use ch units with most fonts, things will probably end up broken. Here are some of the issues you’ll come across as well as ways you can fix them.
+titleSize: 13.1
 ---
 
 Ch units can be an [invaluable tool][typographic-units] when you’re working with monospaced fonts. For example, you can declare `width: 60ch` on an element and it’ll be the perfect size to fit 60 characters per line of text.
