--- a/content/posts/quicksort-for-coding-interviews.mdx
+++ b/content/posts/quicksort-for-coding-interviews.mdx
@@ -1,8 +1,8 @@
 ---
-archived: false
 date: 2025-07-04
 description: Quicksort is the best. It’s fast and easy to write in coding interviews. Here are my go-to variants written in TypeScript.
 title: Quicksort for Coding Interviews
+titleSize: 16
 ---
 
 I’ve been relearning a bunch about sorting algorithms lately. On top of that, I’ve been practicing writing sorting algorithms from memory in high-stress situations, like coding interviews for example. No particular reason.
