--- a/content/posts/sidebearings-and-alignment.mdx
+++ b/content/posts/sidebearings-and-alignment.mdx
@@ -2,6 +2,7 @@
 title: Sidebearings & Alignment
 date: 2015-09-30
 description: When using different font sizes throughout a design, you’ll need to account for sidebearings to keep the type looking properly aligned.
+titleSize: 13.5
 ---
 
 Sidebearings are a necesary part of any font; along with kerning, they ensure that letters look well-spaced next to one another. If you look at one of the glyphs in a font, its _sidebearings_ are the spaces to the left and right of the letterform. These, along with the character itself, span a glyph’s entire width.
