--- a/content/posts/storage-with-cloudflare-domains-and-r2.mdx
+++ b/content/posts/storage-with-cloudflare-domains-and-r2.mdx
@@ -2,6 +2,7 @@
 title: Storage with Cloudflare Domains & R2
 date: 2023-08-29
 description: Learn how to host files on the web using Cloudflare’s R2 bucket storage and inexpensive domain registration.
+titleSize: 13.2
 ---
 
 What’s [Cloudflare R2](https://www.cloudflare.com/developer-platform/r2/)? If you’ve familiar with Amazon S3, Cloudflare sells their R2 service as comparable object storage minus any egress fees. What’s an egress fee? [Nothing, what’s an egress fee with you?](https://www.youtube.com/watch?v=X_lIhrzNhwA) Seriously though, for my purposes, their [pricing calculator](https://r2-calculator.cloudflare.com/) says it’s $0.00, and I enjoy using other Cloudflare products, so that’s why I picked R2 instead of something else.
