--- a/content/posts/styling-fallback-fonts-with-sass.mdx
+++ b/content/posts/styling-fallback-fonts-with-sass.mdx
@@ -2,6 +2,7 @@
 title: Styling Fallback Fonts with Sass
 date: 2016-06-14
 description: One of the pain points of loading fonts asynchronously is writing convoluted CSS for fallback styles. Fortunately, Sass can make it easier to achieve great-looking web typography before a site’s fonts finish loading.
+titleSize: 12.3
 ---
 
 If you’ve ever read a blog post about loading web fonts asynchronously for performance, you’ve probably encountered CSS like this before:
