--- a/content/posts/kerning-and-ligatures-in-letterspaced-type.mdx
+++ b/content/posts/kerning-and-ligatures-in-letterspaced-type.mdx
@@ -2,6 +2,7 @@
 title: Kerning & Ligatures in Letterspaced Type
 date: 2015-09-01
 description: Letterspacing affects type’s horizontal rhythm, and so do kerning and ligatures. Combining all three of them can make for beautifully spaced typography.
+titleSize: 13
 ---
 
 I recently [wrote an article][guidelines] about the general guidelines for letterspacing type on the web. _This article_ is a follow-up and much more focused, so bear that in mind as you continue reading. I’d recommend checking out the last one if you want a quick overview of using letterspacing on the web.
