--- a/content/posts/responsive-footnotes.mdx
+++ b/content/posts/responsive-footnotes.mdx
@@ -2,6 +2,7 @@
 title: Responsive Footnotes
 date: 2014-01-27
 description: Footnotes and sidenotes are both useful ways to annotate online blog posts and articles. With the help of responsive design, it’s now possible to use both approaches at the same time.
+titleSize: 15.3
 ---
 
 In the responsive footnotes pattern, the footnotes at the very bottom of the page transform into sidenotes alongside body paragraphs. The numbered links within body text also appear and disappear, depending on the width of the browser. It’s a useful technique to display additional information on devices with ample screen space but still present the information to people using smaller devices.
