Update R2 post intro

--- a/content/posts/storage-with-cloudflare-domains-and-r2.mdx
+++ b/content/posts/storage-with-cloudflare-domains-and-r2.mdx
@@ -5,9 +5,9 @@ description: Learn how to host files on the web using Cloudflare’s R2 bucket s
 titleSize: 13.2
 ---
 
-What’s [Cloudflare R2](https://www.cloudflare.com/developer-platform/r2/)? If you’ve familiar with Amazon S3, Cloudflare sells their R2 service as comparable object storage minus any egress fees. What’s an egress fee? [Nothing, what’s an egress fee with you?](https://www.youtube.com/watch?v=X_lIhrzNhwA) Seriously though, for my purposes, their [pricing calculator](https://r2-calculator.cloudflare.com/) says it’s $0.00, and I enjoy using other Cloudflare products, so that’s why I picked R2 instead of something else.
+What’s [Cloudflare R2](https://www.cloudflare.com/developer-platform/r2/)? If you’re familiar with Amazon S3 for storing static files and media, Cloudflare sells their R2 service as S3-compatible object storage minus any bandwidth fees to access the files once uploaded (AKA “egress”). For my purposes, their [pricing calculator](https://r2-calculator.cloudflare.com/) says it’s $0.00. I enjoy using other Cloudflare products, so I decided to give R2 a try!
 
-If you want to buy a new domain and set up an R2 bucket for hosting web files, here are the steps to make that happen:
+If like me, you want to buy a new domain and set up an R2 bucket for hosting web files, here are the steps to make that happen:
 
 1. [Buy a domain](#buy-a-domain)
 2. [Create an R2 bucket](#create-a-bucket)
