--- a/content/posts/switching-urls-with-keyboard-maestro.mdx
+++ b/content/posts/switching-urls-with-keyboard-maestro.mdx
@@ -5,11 +5,11 @@ title: Switching URLs with Keyboard Maestro
 titleSize: 11.5
 ---
 
-As a professional software engineer, a common on-the-job need is quickly switching between production and development environments to compare differences. If there’s an issue in dev, I want to check prod to make sure it’s not affecting customers. If the issue’s in prod, I want to check dev to reproduce the issue locally and start fixing it.
+As a software engineer, a common on-the-job need is quickly switching between production and development environments to compare differences. If there’s an issue in dev, I want to check prod to make sure it’s not affecting customers. If the issue’s in prod, I want to check dev to reproduce the issue locally and start fixing it.
 
 I’ve been learning how to use [Astro](https://astro.build/) lately thanks to its performance-centric [server islands](https://docs.astro.build/en/guides/server-islands/) architecture. Right now, one of the biggest Astro repositories available to the public is the [Cloudflare documentation website](https://github.com/cloudflare/cloudflare-docs). I have a few improvements I’d like to contribute to their codebase and part of my workflow has involved switching between development and production to compare changes — a common need for front-end engineers.
 
-Using [Keyboard Maestro](https://www.keyboardmaestro.com/), switching environments has been as quick as a single <kbd>Ctrl+E</kbd> keyboard shortcut to toggle environment URLs.
+Using [Keyboard Maestro](https://www.keyboardmaestro.com/), switching environments has been as quick as a single <KeyboardShortcut>Ctrl+E</KeyboardShortcut> keyboard shortcut to toggle environment URLs.
 
 <video autoPlay controls loop muted playsInline>
   <source src="https://jdj.land/video-environment-toggle-cloudflare.mp4" type="video/mp4" />
@@ -21,7 +21,7 @@ One press and I’m able to switch between production, development, and then bac
 
 So what is Keyboard Maestro? Keyboard Maestro is a macOS productivity and automation app that allows you to design multi-application workflows with a completely visual interface. I was introduced to Keyboard Maestro thanks to [Drew Barontini](https://drewbarontini.com/) and it’s been an invaluable part of my development workflow over the past decade.
 
-Keyboard Maestro can do everything. It can write dynamic snippets like fake email addresses for testing; it can manage your windows by focusing certain apps and moving them; it can intercept keyboard shortcuts so `⌘+R` refreshes Chrome instead of your code editor; it can really do anything and everything.
+Keyboard Maestro can do everything. It can write dynamic snippets like fake email addresses for testing; it can manage your windows by focusing certain apps and moving them; it can intercept keyboard shortcuts so <KeyboardShortcut>⌘+R</KeyboardShortcut> refreshes Chrome instead of your code editor; it can really do anything and everything.
 
 For the scope of this post, we’re going to create a new macro to swap the active URL in Google Chrome.
 
@@ -29,9 +29,9 @@ For the scope of this post, we’re going to create a new macro to swap the acti
 
 The macro works by capturing the current URL in Chrome, then using a switch statement to detect which environment we're in currently and replace it with the alternate environment. Here's how the logic works:
 
-1. **Store in a variable**: Chrome's current URL gets stored in a variable called `TheURL`.
-2. **Switch logic**: A switch/case block checks the URL and replaces current environment with the alternate environment.
-3. **Navigate to new URL**: The modified URL is pasted back in Chrome's address bar and Enter is pressed.
+1. **Store the current URL in a variable**: Chrome's current URL gets stored in a variable called `TheURL`.
+2. **Switch logic**: A switch statement checks the URL and replaces current URL with the alternate environment.
+3. **Navigate to new URL**: Keyboard Maestro pastes the modified URL back in Chrome's address bar and simulates pressing <KeyboardShortcut>Return</KeyboardShortcut>.
 
 So all together, the macro captures the current Chrome URL, hot swaps between production and development, then navigates to the new URL.
 
@@ -49,10 +49,10 @@ To import the macro, you can select the following from the macOS menu bar while 
 
 `File > Import > Import Macros Safely…`
 
-Select the downloaded `toggle-environment.kmmacros` macro and it will be auto imported into your active Keyboard Maestro library. For security reasons, macros are imported disabled by default. Enable the `Toggle Environments` macro, customize it to your project, and you should be good to go!
+Select the downloaded `toggle-environment.kmmacros` macro and it will be auto imported into your active Keyboard Maestro library. For security reasons, macros are imported disabled by default. Enable the `Toggle Environments` macro, customize it to your project, and you should be good to go.
 
 ## Wrap-up
 
-And that's it. Keyboard Maestro is the best (as of now) $36 I've ever spent in my life.
+And that's it!
 
-This example switches between Cloudflare documentation environments, you can customize the macro for anything else by changing the URL strings in the switch statement. Small automations like this compound into huge workflow improvements when used every day without even thinking about them.
+Keyboard Maestro is the most valuable tools I've purchased throughout my career as a software engineer. Small automations compound into huge workflow improvements, especially when chained together used multiple times day.
