Update styles to black and gray

--- a/content/posts/styling-text-with-svg-filters.mdx
+++ b/content/posts/styling-text-with-svg-filters.mdx
@@ -3,6 +3,7 @@ title: Styling Text with SVG Filters
 date: 2016-04-21
 description: With SVG filters, you can build reusable effects for applying custom styles to text. Here’s how to recreate the iconic typography on a US dollar bill using SVG filters.
 publication: code-school
+titleSize: 10.9
 ---
 
 **Note:** This article was originally published on the [Code School Blog](https://web.archive.org/web/20170707134107/https://www.codeschool.com/blog/2016/04/21/styling-text-with-svg-filters/).
