Update post styles

--- a/content/posts/switching-urls-with-keyboard-maestro.mdx
+++ b/content/posts/switching-urls-with-keyboard-maestro.mdx
@@ -11,7 +11,7 @@ I’ve been learning how to use [Astro](https://astro.build/) lately thanks to i
 
 Using [Keyboard Maestro](https://www.keyboardmaestro.com/), switching environments has been as quick as a single <KeyboardShortcut>Ctrl+E</KeyboardShortcut> keyboard shortcut to toggle environment URLs.
 
-<video autoPlay controls height={1080} loop muted playsInline width={1608}>
+<video autoPlay className='border-4' controls height={1080} loop muted playsInline width={1608}>
   <source src="https://jdj.land/video-environment-toggle-cloudflare.mp4" type="video/mp4" />
 </video>
 
