Update post title layout

--- a/content/posts/switching-urls-with-keyboard-maestro.mdx
+++ b/content/posts/switching-urls-with-keyboard-maestro.mdx
@@ -2,7 +2,8 @@
 date: 2025-09-28
 description: Switching between production and development environments can be as easy as a single keyboard shortcut when using Keyboard Maestro.
 title: Switching URLs with Keyboard Maestro
-titleSize: 11.5
+titleSize: 8.68
+titleWidth: full/full
 ---
 
 As a software engineer, a common on-the-job need is quickly switching between production and development environments to compare differences. If there’s an issue in dev, I want to check prod to make sure it’s not affecting customers. If the issue’s in prod, I want to check dev to reproduce the issue locally and start fixing it.
